# TowerDefense

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GTKRunner.cpp  GTKRunner.h  Launcher.glade  Makefile  README.md  SDLRunner.cpp  SDLRunner.h  TowerDefense.cbp  config.yaml  install.sh  main.cpp
Client/: #Launcher.glade#  #Launchermm.glade#  GTKRunner.cpp  GTKRunner.h  Launcher.glade  Launchermm.glade  Lobby.glade  SDLRunner.cpp  SDLRunner.h  main-test-gtk-mm.cpp  main.cpp
Client/GTKmm/: FixedConnect.cpp  FixedConnect.h  FixedLobbies.cpp  FixedLobbies.h  FixedLobby.cpp  FixedLobby.h  FixedLogin.cpp  FixedLogin.h  GTKmmRunner.cpp  GTKmmRunner.h
Client/View/: mainEditor.cpp  mainView.cpp  spritesConfig.yaml  windowConfig.yaml
Client/View/Common/: AnimatedSprite.cpp  AnimatedSprite.h  Announcement.cpp  Announcement.h  Button.cpp  Button.h  ExitView.cpp  ExitView.h  Image.cpp  Image.h  MouseMovement.cpp  MouseMovement.h  MousePosition.cpp  MousePosition.h  MusicLoader.cpp  MusicLoader.h  MusicNamesConfig.h  MusicPlayer.cpp  MusicPlayer.h  Renderer.cpp  Renderer.h  SoundEffect.cpp  SoundEffect.h  Sprite.cpp  Sprite.h  SpriteNamesConfig.h  Text.cpp  Text.h  TextureLoader.cpp  View.h  Window.cpp  Window.h
Client/View/Editor/: AgregarEnemigoButton.cpp  AgregarEnemigoButton.h  AgregarPortalSalidaButton.cpp  AumentarAltoMapaButton.h  AumentarAnchoMapaButton.cpp  AumentarAnchoMapaButton.h  AumentarPaddingButton.cpp  AumentarPaddingButton.h  AumentarTiempoButton.cpp  AumentarTiempoButton.h  AumentarTiempoEnemigosButton.cpp  AumentarTiempoEnemigosButton.h  AumentarTiempoHordaButton.cpp  AumentarTiempoHordaButton.h  ContadorEnemigosInput.cpp  ContadorEnemigosInput.h  ContadorHordasInput.cpp  ContadorHordasInput.h  ContadorTiempoEnemigosInput.cpp  ContadorTiempoEnemigosInput.h  ContadorTiempoHordaInput.cpp  ContadorTiempoHordaInput.h  ContadorTiempoInput.cpp  ContadorTiempoInput.h  Editor.cpp  (+34 more)
Client/include/: ClientSocket.h  NonBlockingThreadSafeQueue.h  NotificationReciever.h
Client/src/: ClientSocket.cpp  NotificationReciever.cpp  main.cpp
Common/: ClientDisconnectedException.h  Lock.cpp  Lock.h  Paths.h  Protocolo.h  SocketWrapper.cpp  SocketWrapper.h
Config/Client/: windowConfig.yaml
Config/Editor/: windowConfig.yaml
Config/Maps/: Insane.yaml
Documentos/: Isometricas a Cartesianas  Protocolo
Resources/: .~lock.el mapa que armo a mano en el constructor.ods#  el mapa que armo a mano en el constructor.ods
Server/include/: PlayerProxy.h  ServerSocket.h  TFServer.h  ThreadSafeQueue.h
Server/src/: PlayerProxy.cpp  ServerSocket.cpp  TFServer.cpp  main.cpp
TowerDefense/: Protocolo.h
TowerDefense/Client/: Makefile
TowerDefense/Server/: Makefile
TowerDefenseServer/: Makefile  config.yaml
TowerDefenseServer/include/: BuildTowerCommand.h  Command.h  DemonioVerde.h  EnviormentUnit.h  GroundProjectile.h  GroundTower.h  Helpers.h  Map.h  NonPlacedUnitCannotStep.h  PathTile.h  Projectile.h  SolidGroundTile.h  ThreadSafeQueue.h  Tile.h  Tower.h  TowerDefenseGame.h
TowerDefenseServer/src/: BuildTowerCommand.cpp  Command.cpp  DemonioVerde.cpp  EnviormentUnit.cpp  GameConfiguration.cpp  GroundProjectile.cpp  GroundTower.cpp  Map.cpp  PathTile.cpp  Projectile.cpp  SolidGroundTile.cpp  Tile.cpp  Tower.cpp  TowerDefenseGame.cpp  main.cpp
View/: AgregarEnemigoButton.cpp  AgregarEnemigoButton.h  Button.cpp  Button.h  Buttons.cpp  Buttons.h  Editor.cpp  Editor.h  EliminarEnemigoButton.cpp  EliminarEnemigoButton.h  EliminarHordaButton.cpp  EliminarHordaButton.h  FireTowerView.cpp  FireTowerView.h  KeyboardInput.cpp  KeyboardInput.h  Makefile  MapView.cpp  MapView.h  MousePosition.cpp  MousePosition.h  NuevaHordaButton.cpp  NuevaHordaButton.h  PortalEntradaView.cpp  PortalEntradaView.h  PortalSalidaView.cpp  PortalView.cpp  PortalView.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  SpriteNamesConfig.h  SuperficieButton.cpp  SuperficieButton.h  TestButton.cpp  TestButton.h  TestToggleButton.cpp  TestToggleButton.h  TextInput.cpp  (+16 more)
View/Common/: AnimatedSprite.cpp  AnimatedSprite.h  Button.h  Image.cpp  Image.h  KeyboardInput.cpp  KeyboardInput.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  SpriteNamesConfig.h  Text.cpp  Text.h  TextInput.h  TextureLoader.cpp  TextureLoader.h  View.cpp  ViewError.h  Window.cpp
View/Editor/: AgregarCaminoButton.cpp  AgregarCaminoButton.h  AgregarEnemigoButton.cpp  AgregarEnemigoButton.h  AgregarPortalEntradaButton.cpp  AgregarPortalEntradaButton.h  AgregarPortalSalidaButton.cpp  AgregarPortalSalidaButton.h  AgregarTierraFirmeButton.cpp  AgregarTierraFirmeButton.h  AumentarAltoMapaButton.cpp  AumentarAltoMapaButton.h  AumentarAnchoMapaButton.h  AumentarTiempoButton.cpp  AumentarTiempoButton.h  Button.cpp  Button.h  Buttons.cpp  Buttons.h  ContadorEnemigosInput.cpp  ContadorEnemigosInput.h  ContadorTiempoInput.cpp  DisminuirAltoMapaButton.cpp  DisminuirAltoMapaButton.h  DisminuirAnchoMapaButton.cpp  DisminuirAnchoMapaButton.h  DisminuirTiempoButton.h  DoNothingButton.cpp  DoNothingButton.h  Editor.cpp  Editor.h  EditorButtons.h  EditorConstants.h  EliminarEnemigoButton.cpp  EliminarEnemigoButton.h  EliminarHordaButton.cpp  EliminarHordaButton.h  EnemigoImage.cpp  EnemigoImage.h  GuardarButton.h  (+7 more)
View/Model/: DepthLevel.cpp  DepthLevel.h  FireTowerView.cpp  FireTowerView.h  HudVIew.cpp  MapView.cpp  MapView.h  ModelView.cpp  ModelView.h  PortalEntradaView.cpp  PortalSalidaView.cpp  PortalSalidaView.h  PortalView.cpp  PortalView.h  Shot.cpp  Shot.h  ShotView.cpp  ShotView.h  SpellView.cpp  SpellView.h  TowerView.cpp  TowerView.h  UnitView.cpp  UnitView.h
config/: config.yaml  windowConfig.yaml
config/mapas/: Easy.yaml  Hard.yaml  Medium.yaml  mapa.yaml  test.yaml
src/: CannotSpawnWithoutSettingSpawnTiles.h  DemonioVerde.cpp  DemonioVerde.h  EnviormentUnit.cpp  EnviormentUnit.h  IEnviormentUnit.h  ITile.h  IncompletePathException.h  Makefile  Map.cpp  Map.h  PathTile.cpp  PathTile.h  SceneTile.cpp  SceneTile.h  SolidGroundTile.cpp  StructureTile.cpp  StructureTile.h  Tower.cpp  Tower.h  TowerDefenseGame.cpp  TowerDefenseGame.h  main.cpp  tp
(+449 files in other folders)
